--- a/styless.css
+++ b/styless.css
@@ -87,11 +87,14 @@
             font-weight: 600;
         }
         .biography img {
-            max-width: 50%;
-            height: 500px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-            margin: 20px 0;
+        display: block;
+        margin: 20px auto; /* Rasmni markazga joylashtiradi */
+        max-width: 50%;
+        height: 300px;
+        border-radius: 10px;
+        box-shadow: 0 4px 15px rgba(0,0,0,0.2);
+        }
+
         }
         .works ul {
             list-style-type: none;
